Revision history for {{$dist->name}}

{{$NEXT}}

0.05      2017-07-28 10:16:40 -0400
  - Fixed hiccup where Alien:::MSYS was added as a
    test prereq on non-Windows platforms

0.04      2017-07-07 03:03:34 -0400
  - Fixes for OpenBSD.

0.03      2017-07-05 12:50:20 -0400
  - Add dependency on Alien::m4

0.02      2017-06-27 05:11:19 -0400
  - Fix requirements for Windows

0.01      2017-06-26 17:24:43 -0400
  - initial version