@@ -22,6 +22,7 @@ irc           = irc://irc.perl.org/#native
 remove = strict
 remove = warnings
 remove = base
+remove = File::Temp
 
 [Prereqs / BuildPrereqs]
 -phase = build
