@@ -16,6 +16,7 @@ $modules{$_} = $_ for qw(
   Alien::Build::Plugin::Build::Autoconf
   Env
   ExtUtils::MakeMaker
+  File::chdir
   Test2::V0
   Test::Alien
   Test::More
