@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Support for running out of blib directory
 
 0.05      2017-07-28 10:16:40 -0400
   - Fixed hiccup where Alien:::MSYS was added as a
